--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^22.18.9",
