--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^6.0.0",
     "fastify": "^5.6.1",
     "fastify-jwt": "^4.1.3",
+    "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
