--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "scripts": {
     "dev": "nodemon --watch src dist/index.js",
     "dev-ts": "ts-node src/index.ts",
-    "build": "tsc --build --force tsconfig.json",
+    "build": "tsc --build --force tsconfig.json && cp .env ./dist/.env",
     "start": "node --experimental-modules dist/index.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "fastify-jwt": "^4.1.3",
     "jsonwebtoken": "^9.0.2",
