--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node --experimental-modules dist/index.js"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
