--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "moduleDetection": "legacy",
-    "outDir": "./dist"
-    // "strict": true,
+    "outDir": "./dist",
+    "strict": true
     // "verbatimModuleSyntax": true,
     // "isolatedModules": true,
     // "noUncheckedSideEffectImports": true,
