--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "fastify": "^5.6.1",
     "fastify-jwt": "^4.1.3",
     "jsonwebtoken": "^9.0.2",
+    "lodash-es": "^4.17.21",
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash-es": "^4.17.12",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^22.18.9",
     "nodemon": "^3.1.10",
