--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
+    "@fastify/jwt": "^10.0.0",
     "@fastify/websocket": "^11.2.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
-    "fastify-jwt": "^4.1.3",
     "jsonwebtoken": "^9.0.2",
     "lodash-es": "^4.17.21",
     "module-alias": "^2.2.3"
