--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/module-alias": "^2.0.4",
     "@types/node": "^22.18.9",
     "@types/ws": "^8.18.1",
+    "fastify-tsconfig": "^3.0.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
