--- a/package.json
+++ b/package.json
@@ -20,14 +20,12 @@
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
-    "lodash-es": "^4.17.21",
-    "module-alias": "^2.2.3"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash-es": "^4.17.12",
-    "@types/module-alias": "^2.0.4",
     "@types/node": "^22.18.9",
     "@types/ws": "^8.18.1",
     "fastify-tsconfig": "^3.0.0",
